[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "martini-saxs"
version = "0.1.0"
description = "Martini CG SAXS utilities"
requires-python = ">=3.10"

[project.scripts]
martini_saxs = "saxs_tools.saxs:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]